--- a/gimp-dbp/trunk/PKGBUILD
+++ b/gimp-dbp/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=gimp-dbp
 _srcname=dbp
-_dlver=1-1-7
+_dlver=1-1-8
 pkgver=$(echo ${_dlver} | sed 's/-/./g')
 pkgrel=1
 pkgdesc="David's batch processor for the GIMP"
@@ -12,13 +12,14 @@ arch=(i686 x86_64)
 depends=('gimp>=2.4')
 url="http://members.ozemail.com.au/~hodsond/dbp.html"
 source=(http://www.ozemail.com.au/~hodsond/${_srcname}Src-${_dlver}.tgz)
-md5sums=('0fef00adb228fd8297d309586c2aff83')
+md5sums=('8ee1797fdf9c6188b8235ae6c9dae3d4')
 
 build() {
   cd ${startdir}/src/${_srcname}-${pkgver}
  # Tweak Makefile -- remove auto-install
   sed -i 's|^\tgimptool.*$||' Makefile
-  sed -i '/DISABLE_DEPRECATED/d' Makefile
+  sed -i "s|<string>|<cstring>|" op.h
+ #sed -i '/DISABLE_DEPRECATED/d' Makefile
  # create gimp-2.0 plugin and install it
   make ${_srcname} || return 1
   install -Dsm755 ${_srcname} ${startdir}/pkg/usr/lib/gimp/2.0/plug-ins/${_srcname}
