--- a/ardour/trunk/PKGBUILD
+++ b/ardour/trunk/PKGBUILD
@@ -7,7 +7,7 @@
 # for fixed dependencies speaking in terms of versions
 
 pkgname=ardour
-pkgver=2.3.1
+pkgver=2.5
 pkgrel=1
 pkgdesc="A multichannel hard disk recorder and digital audio workstation"
 arch=(i686 x86_64)
@@ -15,21 +15,21 @@ license=('GPL')
 url="http://ardour.org"
 depends=('liblrdf>=0.4.0-5' 'libsamplerate' 'jack-audio-connection-kit' 'flac'
          'curl>=7.16.2' 'libart-lgpl' 'ladspa' 'libxslt' 'libgnomecanvas'
-         'liblo' 'libusb' 'fftw')
+         'liblo' 'libusb' 'fftw' 'aubio')
 makedepends=('librsvg' 'scons' 'boost')
 install=${pkgname}.install
 source=(http://ardour.org/files/releases/${pkgname}-${pkgver}.tar.bz2 \
         ${pkgname}.desktop libsndfile.patch)
-md5sums=('54abb231ae0c1fa3b3f2c2177c644c22' '22ec67c24d53d2b44501f158de48c25b' \
+md5sums=('88180d400e8c19ceea41aabadc098116' '22ec67c24d53d2b44501f158de48c25b' \
          '583f3da75ec960f9da2cf196ed717396')
 
 build() {
-  cd ${startdir}/src/${pkgname}-2.3
   # start building ardour now
   cd ${startdir}/src/${pkgname}-${pkgver}
   patch -Np1 -i ../libsndfile.patch || return 1
   sed -i -e "s@/configure@& --prefix=/usr@g" libs/libsndfile/SConscript
   sed -i -e "s/lib64/lib/g" SConstruct
+  sed -i "s/_protocol.h>/\0\n#include <cstring>/g" libs/surfaces/tranzport/screen.cc
 
   # force -O2 from the CFLAGS in makepkg.conf
   sed -i '/-O3/d' SConstruct
