--- a/lzma-utils/trunk/PKGBUILD
+++ b/lzma-utils/trunk/PKGBUILD
@@ -1,8 +1,9 @@
-
+# Maintainer: François Charette <firmicus ατ gmx δοτ net>
 # Contributor: François Charette <firmicus ατ gmx δοτ net>
+
 pkgname=lzma-utils
-pkgver=4.32.6
-pkgrel=2
+pkgver=4.32.7
+pkgrel=1
 pkgdesc="Compression utility like bzip2, but 15% better and faster"
 arch=('i686' 'x86_64')
 url="http://tukaani.org/lzma/"
@@ -12,7 +13,7 @@ provides=('lzma')
 replaces=('lzma')
 options=(!libtool)
 source=(${url}lzma-$pkgver.tar.gz)
-md5sums=('211d6207fdd7f20eaaae1bbdeb357d3a')
+md5sums=('2a748b77a2f8c3cbc322dbd0b4c9d06a')
 
 build() {
   cd "$startdir/src/lzma-$pkgver"
