--- a/boo/trunk/PKGBUILD
+++ b/boo/trunk/PKGBUILD
@@ -1,28 +1,28 @@
 # $Id: PKGBUILD,v 1.7 2008/06/17 14:42:17 BaSh Exp $
-# Maintainer: Timm Preetz <timm@preetz.us>
+# Maintainer: Hugo Doria <hugo@archlinux.org>
 # Contributor: tardo <tardo@nagi-fanboi.net>
 # Contributor: Brice Carpentier <brice@dlfp.org>
 
 pkgname=boo
 pkgver=0.8.1.2865
-pkgrel=2
+pkgrel=3
 pkgdesc="A scripting language"
 arch=('i686' 'x86_64')
 url="http://boo.codehaus.org/"
 license=('GPL')
 depends=('mono')
-source=(http://dist.codehaus.org/boo/distributions/$pgname-$pkgver.tar.gz)
+source=(http://dist.codehaus.org/boo/distributions/${pkgname}-${pkgver}.tar.gz)
 md5sums=('6c0df0d31ed1c90e31c3d1d1284738ae')
 options=('!makeflags')
 
 build() {
-  export MONO_SHARED_DIR="$startdir/src/.wabi"
+  export MONO_SHARED_DIR="${srcdir}/.wabi"
   mkdir -p $MONO_SHARED_DIR
-  cd $startdir/src/$pkgname-$pkgver
+  cd ${srcdir}/${pkgname}-${pkgver}
   sed -i -e 's|/lib|/lib/mono|' extras/boo.pc.in  || return 1
   ./configure --prefix=/usr
   make VERBOSE=1 || return 1
-  make DESTDIR=$startdir/pkg install || return 1
+  make DESTDIR=${pkgdir} install || return 1
   rm -rf $MONO_SHARED_DIR  || return 1
-  rm -rf $startdir/pkg/usr/share/gtksourceview-1.0 || return 1
+  rm -rf ${pkgdir}/usr/share/gtksourceview-1.0 || return 1
 }
