--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -10,7 +10,7 @@ conflicts=('texlive-langafrican' 'texlive-langarab' 'texlive-langarmenian' 'texl
 provides=('texlive-langafrican' 'texlive-langarab' 'texlive-langarmenian' 'texlive-langcroatian' 'texlive-langhebrew' 'texlive-langindic' 'texlive-langmongolian' 'texlive-langtibetan' 'texlive-langvietnamese') 
 depends=('texlive-latexextra')
 makedepends=('lzma-utils')
-groups=('texlive-most')
+groups=('texlive-lang')
 url='http://tug.org/texlive/'
 source=("ftp://ftp.archlinux.org/other/texlive/$pkgname-src.zip")
 install=texlive.install
