--- a/boo/trunk/PKGBUILD
+++ b/boo/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=boo
 pkgver=0.8.1.2865
-pkgrel=3
+pkgrel=4
 pkgdesc="A scripting language"
 arch=('i686' 'x86_64')
 url="http://boo.codehaus.org/"
@@ -24,5 +24,5 @@ build() {
   make VERBOSE=1 || return 1
   make DESTDIR=${pkgdir} install || return 1
   rm -rf $MONO_SHARED_DIR  || return 1
-  rm -rf ${pkgdir}/usr/share/gtksourceview-1.0 || return 1
+  rm -rf ${pkgdir}/share/ || return 1
 }
