--- a/enblend-enfuse/trunk/PKGBUILD
+++ b/enblend-enfuse/trunk/PKGBUILD
@@ -8,6 +8,7 @@ pkgrel=1
 pkgdesc="intelligent blend tool for overlapping picture"
 arch=("i686" "x86_64")
 license=('GPL')
+url="http://enblend.sourceforge.net"
 depends=('openexr' 'glew>=1.5' 'libxmi' 'freeglut' 'libgl' 'lcms')
 makedepends=('boost')
 replaces=('enblend')
@@ -15,8 +16,7 @@ conflicts=('enblend')
 provides=('enblend')
 install=${pkgname}.install
 source=(http://dl.sourceforge.net/sourceforge/enblend/${pkgname}-${pkgver}.tar.gz)
-url="http://enblend.sourceforge.net"
-md5sums=('9b6ebaf672f5103c633a53c9723d99c3' 'b14bf09229298f59a9aed8e503b3e183')
+md5sums=('9b6ebaf672f5103c633a53c9723d99c3')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
