--- a/tomcat/trunk/PKGBUILD
+++ b/tomcat/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=tomcat
 pkgver=5.5.26
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 pkgdesc="Servlet container for Java Servlet and JavaServer Pages"
 url="http://tomcat.apache.org/"
@@ -35,7 +35,7 @@ build() {
   # install everything
   mkdir -p ${pkgdir}/opt/tomcat
   cp -R * ${pkgdir}/opt/tomcat
-  install -D -m755 ${srcdir}tomcat ${pkgdir}/etc/rc.d/tomcat
+  install -D -m755 ${srcdir}/tomcat ${pkgdir}/etc/rc.d/tomcat
   install -D -m755 ${srcdir}/tomcat.conf.d ${pkgdir}/etc/conf.d/tomcat
   chgrp -R 66 ${pkgdir}/opt/tomcat/conf ${pkgdir}/opt/tomcat/work
   chmod 0660 ${pkgdir}/opt/tomcat/conf/{*.xml,*.policy,*.properties,/Catalina/localhost/*.xml}
