--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -1,15 +1,16 @@
 # $Id$
+# Maintainer: Aaron Griffin <aaron@archlinux.org>
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=udev
 pkgver=128
-pkgrel=1
+pkgrel=2
 pkgdesc="The userspace dev tools (udev)"
 arch=(i686 x86_64)
 url="http://www.kernel.org/pub/linux/utils/kernel/hotplug/udev.html"
 license=('GPL')
 groups=('base')
-depends=('glibc' 'coreutils' 'util-linux')
+depends=('glibc' 'coreutils' 'util-linux' 'gcc-libs')
 makedepends=('kernel26') #needed to build framebuffer blacklist
 install=udev.install
 backup=(etc/udev/udev.conf
@@ -22,11 +23,15 @@ replaces=('devfsd')
 conflicts=('initscripts<2008.02')
 options=(!makeflags)
 source=(http://www.kernel.org/pub/linux/utils/kernel/hotplug/$pkgname-$pkgver.tar.bz2
-        81-arch.rules load-modules.sh cdsymlinks.sh root-link.sh arch-udev-rules.patch
-        readme-udev-arch.txt)
-md5sums=('a21a954bb1306bc9c6c3f27792c6e508' '610f75f2b05437b14f3bc3418f8e7f65'
-         '945f6d30ab458189b3c17f8e6722da1f' '8424b78e9dd772e75b4ef90814807815'
-         '2d6dc6842464f107bccc68cd505a6c31' 'c17e075cc1806bf94a3678168ddec4e1'
+        81-arch.rules load-modules.sh resolve-modalias.cpp cdsymlinks.sh root-link.sh
+        arch-udev-rules.patch readme-udev-arch.txt)
+md5sums=('a21a954bb1306bc9c6c3f27792c6e508'
+         '610f75f2b05437b14f3bc3418f8e7f65'
+         '56177eabff2c418572dfbfbf24a65228'
+         'd3c2eef11cd5bf2453b7b1b5330c95d2'
+         '8424b78e9dd772e75b4ef90814807815'
+         '2d6dc6842464f107bccc68cd505a6c31'
+         'beb8ebffc3652584363804e41445ba17'
          '7fc6d33bb218e752302eef0a80ff0a89')
 
 build() {
@@ -35,11 +40,17 @@ build() {
   make || return 1
   make DESTDIR=$startdir/pkg install
 
-  #Non-stock rules still go in /etc
+  # Fix pkgconfig path
+  install -d -m755 $startdir/pkg/usr/lib
+  mv $startdir/pkg/lib/pkgconfig $startdir/pkg/usr/lib
+
+  # Non-stock rules still go in /etc
   install -D -m644 $startdir/src/81-arch.rules $startdir/pkg/etc/udev/rules.d/81-arch.rules
 
   # install our module loading subsystem
   install -D -m755 $startdir/src/load-modules.sh $startdir/pkg/lib/udev/load-modules.sh
+  install -d -m755 $startdir/pkg/bin
+  g++ -Wall $CXXFLAGS -o $startdir/pkg/bin/resolve-modalias $startdir/src/resolve-modalias.cpp
   # install cdsymlinks.sh
   install -D -m755 $startdir/src/cdsymlinks.sh $startdir/pkg/lib/udev/cdsymlinks.sh
   # install root-link.sh
@@ -59,7 +70,7 @@ build() {
   done
   # fix standard udev rules to fit to arch
   cd $startdir/pkg/lib/udev/rules.d/
-  patch -Np0 -i $startdir/src/arch-udev-rules.patch || return 1
+  patch -Np1 -i $startdir/src/arch-udev-rules.patch || return 1
 
   # disable persistent cdromsymlinks and network by default 
   # and move it to /etc/udev/rules.d
@@ -69,7 +80,7 @@ build() {
      $startdir/pkg/etc/udev/rules.d/75-cd-aliases-generator.rules.optional
   # create framebuffer blacklist
   mkdir -p $startdir/pkg/etc/modprobe.d/
-  for mod in $(find /lib/modules/ -name '*fb*.ko' -exec basename {} .ko \;); do 
+  for mod in $(find /lib/modules/*/kernel/drivers/video -name '*fb.ko' -exec basename {} .ko \;); do 
 	echo "blacklist $mod" >> $startdir/pkg/etc/modprobe.d/framebuffer_blacklist
   done
 }
