--- a/indent/trunk/PKGBUILD
+++ b/indent/trunk/PKGBUILD
@@ -1,18 +1,26 @@
 # $Id$
-# Maintainer: aurelien <aurelien@archlinux.org>
+# Maintainer: Aaron Griffin <aaron@archlinux.org>
+# Contributor: aurelien <aurelien@archlinux.org>
 # Contributor: Herb Rose (hrose56@yahoo.com)
 pkgname=indent
-pkgver=2.2.9
+pkgver=2.2.10
 pkgrel=1
 pkgdesc="The GNU Pretty-printer"
-url="http://mysite.freeserve.com/indent/beautify.html"
+url="http://indent.isidore-it.eu/beautify.html"
 depends=('glibc')
-source=(http://mysite.freeserve.com/$pkgname/${pkgname}_$pkgver.tar.gz)
-md5sums=('dcdbb163bef928306dee2a0cfc581c89')
+arch=(i686 x86_64)
+license=('GPL3')
+source=(http://indent.isidore-it.eu/$pkgname-$pkgver.tar.gz)
+md5sums=('be35ea62705733859fbf8caf816d8959')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --datadir=/usr/share/
   make || return 1
   make prefix=$startdir/pkg/usr install
+
+  # The makefile for docs uses $(prefix) stupidly
+  # fix that the easiest way
+  mkdir -p $startdir/pkg/usr/share
+  mv $startdir/pkg/usr/doc $startdir/pkg/usr/share
 }
