--- a/indent/trunk/PKGBUILD
+++ b/indent/trunk/PKGBUILD
@@ -4,13 +4,14 @@
 # Contributor: Herb Rose (hrose56@yahoo.com)
 pkgname=indent
 pkgver=2.2.10
-pkgrel=1
+pkgrel=2
 pkgdesc="The GNU Pretty-printer"
 url="http://indent.isidore-it.eu/beautify.html"
-depends=('glibc')
+depends=('glibc' 'texinfo')
 arch=(i686 x86_64)
 license=('GPL3')
 source=(http://indent.isidore-it.eu/$pkgname-$pkgver.tar.gz)
+install=indent.install
 md5sums=('be35ea62705733859fbf8caf816d8959')
 
 build() {
@@ -23,4 +24,8 @@ build() {
   # fix that the easiest way
   mkdir -p $startdir/pkg/usr/share
   mv $startdir/pkg/usr/doc $startdir/pkg/usr/share
+
+  rm -f $startdir/pkg/usr/share/info/dir
+
+  #TODO this tarball installs texinfo2man as well... we probably don't want that
 }
