--- a/nuvexport/trunk/PKGBUILD
+++ b/nuvexport/trunk/PKGBUILD
@@ -1,18 +1,19 @@
-# $Id$
-# Contributor: Paul Mattal <paul@mattal.com>
 # Maintainer: Paul Mattal <paul@archlinux.org>
+# Contributor: Paul Mattal <paul@mattal.com>
+# Contributor: Jeremy Sands <cto@jeremysands.com>
+
 pkgname=nuvexport
 pkgver=20080311
 relnum=0.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Export for MythTV nuv files to other formats (DVD/SVCD/DivX,etc.)"
 arch=(i686 x86_64)
 url="http://forevermore.net/files/nuvexport"
 license=('GPL2')
 depends=(perl perl-dbi 'ffmpeg>=20060920' perl-dbd-mysql perl-date-manip)
-source=(http://forevermore.net/files/nuvexport/$pkgname-$relnum-0.$pkgver.svn.tar.bz2 $pkgname-ipod-disable.patch)
-md5sums=('2d0a99623f06394daf3bf8769536d3cd'
-         'acd2dad9987e68359ead8b0be5e5797c')
+install=${pkgname}.install
+source=(http://forevermore.net/files/nuvexport/$pkgname-$relnum-0.$pkgver.svn.tar.bz2)
+md5sums=('2d0a99623f06394daf3bf8769536d3cd')
 
 build() {
   cd $startdir/src/$pkgname-$relnum
