--- a/kdebase-runtime/trunk/PKGBUILD
+++ b/kdebase-runtime/trunk/PKGBUILD
@@ -12,6 +12,7 @@ groups=('kde')
 depends=('kdelibs' 'xine-lib' 'hicolor-icon-theme' 'rarian' 'smbclient')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdepimlibs')
 options=('docs')
+install='kdebase-runtime.install'
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
 md5sums=('f03488d19c3bd95634b797229ac55127')
 
