--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,22 +1,23 @@
 # $Id$
-# Maintainer: damir <damir@archlinux.org>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Contributor: damir <damir@archlinux.org>
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=gnuplot
 pkgver=4.2.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Plotting package which outputs to X11, PostScript, PNG, GIF, and others"
 arch=('i686' 'x86_64')
 url="http://www.gnuplot.info"
 license=('custom')
-depends=('libpng' 'libx11' 'gd' 'wxgtk' 'ncurses>=5.6-7')
-makedepends=('texinfo')
+depends=('gd' 'wxgtk' 'cairo')
+makedepends=('texinfo' 'emacs')
 install=gnuplot.install
 source=("http://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.gz")
 md5sums=('6b6d22662df5101b308c465a722c43ce')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd $srcdir/$pkgname-$pkgver
   ./configure --prefix=/usr --mandir=/usr/share/man \
               --infodir=/usr/share/info \
               --libexecdir=/usr/bin \
@@ -32,11 +33,10 @@ build() {
        TEXMFLOCAL=$startdir/pkg/usr/share/texmf-dist \
        datadir=$startdir/pkg/usr/share install
 
-  install -D -m644 lisp/dotemacs $startdir/pkg/usr/share/emacs/site-lisp/dotemacs
-  install -D -m644 Copyright $startdir/pkg/usr/share/licenses/$pkgname/Copyright
+  install -Dm644 lisp/dotemacs $pkgdir/usr/share/emacs/site-lisp/dotemacs || return 1
+  install -Dm644 Copyright $pkgdir/usr/share/licenses/$pkgname/Copyright || return 1
 
   rm -f $startdir/pkg/usr/share/texmf-dist/ls-R
-  rm -f $pkgdir/usr/share/info/dir
 }
 
 
