--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,18 +5,20 @@
 
 pkgname=fcgi
 pkgver=2.4.0
-pkgrel=4
-depends=('glibc')
+pkgrel=5
+depends=('gcc-libs')
 pkgdesc="FASTCgi(fcgi) islanguage independent, high performant extension to CGI"
 arch=(i686 x86_64)
 license=('custom')
-options=('!LIBTOOL')
+options=('!libtool')
 url="http://www.fastcgi.com"
-source=("http://www.fastcgi.com/dist/$pkgname-$pkgver.tar.gz")
-md5sums=('d15060a813b91383a9f3c66faf84867e')
+source=("http://www.fastcgi.com/dist/$pkgname-$pkgver.tar.gz" 'fcgi-configure.patch')
+md5sums=('d15060a813b91383a9f3c66faf84867e' '4312cdf8ee47c9f8a276e7d892a18ea6')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
+  # fix from Debian: http://ftp.debian.org/debian/pool/main/libf/libfcgi/libfcgi_2.4.0-7.diff.gz
+  patch -p1 -i ${srcdir}/fcgi-configure.patch || return 1
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=$startdir/pkg install || return 1
