--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=mpfr
 pkgver=2.3.2
-pkgrel=1
+pkgrel=2
 pkgdesc="multiple-precision floating-point library"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 url="http://www.mpfr.org/"
-depends=('gmp>=4.2.3')
+depends=('gmp>=4.2.3' 'texinfo')
 options=('!libtool')
 install=mpfr.install
 source=(http://www.mpfr.org/mpfr-current/mpfr-${pkgver}.tar.gz)
@@ -20,7 +20,7 @@ build() {
   ./configure --prefix=/usr --enable-thread-safe --enable-shared || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install || return 1
-  cd "${pkgdir}/usr/share/info"
+  cd "${pkgdir}/usr/share/info" || return 1
   rm -f dir
   gzip * || return 1
 }
